syntax = "proto3";

option csharp_namespace = "GRPC.Server.Protos";

package sensor;

service Sensor {
	rpc Status (Status) returns (EmptyResponse);
	rpc RequestCommands (CommandsRequest) returns (stream CommandResponse);
}

message EmptyRequest {
}

message EmptyResponse {
}

message Status {
	int32 id = 1;
	int32 uptime = 2;
	message RuntimeErrors {
		enum ErrorSeverity {
			Informational = 0;
			Warning = 1;
			Critical = 2;
		}
		ErrorSeverity errorSeverity = 1;
		int32 errorCode = 2;
		string errorMessage = 3;
	}
	repeated RuntimeErrors errors = 3;
}

message CommandsRequest {
	int32 id = 1;
}

message CommandResponse {
	string command = 1;
}