syntax = "proto3";

option csharp_namespace = "GRPC.Server.Protos";

package sensor;

service Sensor {
	rpc Status (SensorStatus) returns (SensorCommands);
	rpc ReadingsStream (stream SensorReadings) returns (BlankResponse);
}

message SensorStatus {
	int32 sensorId = 1;
	int32 uptime = 2;
}

message SensorCommands {
	repeated string commands = 1;
}

message SensorReadings {
	int32 sensorId = 1;
	message ReadingValue {
		string field = 1;
		float value = 2;
	}
	repeated ReadingValue readingValues = 2;
}

message BlankResponse {}
